[gd_scene load_steps=19 format=2]

[ext_resource path="res://Assets/Resources/Themes/DevMainMenu.tres" type="Theme" id=1]
[ext_resource path="res://Scenes/DevMainMenu.gd" type="Script" id=2]
[ext_resource path="res://Assets/Resources/Shaders/visual/water.tres" type="Shader" id=3]
[ext_resource path="res://Assets/Resources/Fonts/Montserrat/Montserrat-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/Resources/Images/rock_bg_crack.png" type="Texture" id=5]
[ext_resource path="res://Assets/Resources/Images/rock.png" type="Texture" id=6]
[ext_resource path="res://Assets/Resources/Images/LightMasks/LMcircle1.png" type="Texture" id=7]

[sub_resource type="QuadMesh" id=7]

[sub_resource type="Gradient" id=8]
colors = PoolColorArray( 1, 1, 1, 1, 0.54902, 0.772549, 0.905882, 1 )

[sub_resource type="GradientTexture" id=9]
gradient = SubResource( 8 )

[sub_resource type="QuadMesh" id=38]

[sub_resource type="Gradient" id=37]
colors = PoolColorArray( 0.458824, 0.72549, 0.819608, 1, 0.991128, 0.9955, 0.997043, 1 )

[sub_resource type="GradientTexture" id=39]
gradient = SubResource( 37 )

[sub_resource type="ShaderMaterial" id=5]
shader = ExtResource( 3 )
shader_param/XUV = 8.0
shader_param/YUV = 8.0
shader_param/foam_scalar = 0.04

[sub_resource type="QuadMesh" id=6]

[sub_resource type="Gradient" id=33]

[sub_resource type="GradientTexture" id=34]
gradient = SubResource( 33 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 4 )

[node name="MainMenu" type="Node2D"]

[node name="bg" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="bg"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="bg_img" type="Sprite" parent="bg"]
light_mask = 3
position = Vector2( 577, 252 )
scale = Vector2( 3.5, 3.5 )
texture = ExtResource( 5 )

[node name="MeshInstance2D" type="MeshInstance2D" parent="bg/bg_img"]
show_behind_parent = true
light_mask = 2
position = Vector2( 35, -32 )
rotation = 1.5708
scale = Vector2( 60, 60 )
mesh = SubResource( 7 )
texture = SubResource( 9 )

[node name="Sky3" type="MeshInstance2D" parent="bg/bg_img/MeshInstance2D"]
visible = false
light_mask = 2
position = Vector2( -54, -263 )
rotation = -1.57079
scale = Vector2( 400, 400 )
z_index = 5
mesh = SubResource( 38 )
texture = SubResource( 39 )

[node name="Light2D" type="Light2D" parent="bg/bg_img/MeshInstance2D"]
light_mask = 2
position = Vector2( -54, -263 )
rotation = -1.57079
scale = Vector2( 400, 400 )
texture = ExtResource( 7 )
range_item_cull_mask = 2

[node name="Rocks" type="Node2D" parent="bg"]

[node name="Rock1" type="Sprite" parent="bg/Rocks"]
position = Vector2( 333, 331 )
rotation = -0.261799
scale = Vector2( 3.5, 3.5 )
texture = ExtResource( 6 )

[node name="Rock2" type="Sprite" parent="bg/Rocks"]
position = Vector2( 432, 341 )
rotation = 0.521536
scale = Vector2( 3.5, 3.5 )
texture = ExtResource( 6 )

[node name="Rock3" type="Sprite" parent="bg/Rocks"]
position = Vector2( 537, 333 )
rotation = -0.618703
scale = Vector2( 3.5, 3.5 )
texture = ExtResource( 6 )

[node name="Rock4" type="Sprite" parent="bg/Rocks"]
position = Vector2( 642, 328 )
rotation = 1.22612
scale = Vector2( 3.5, 3.5 )
texture = ExtResource( 6 )

[node name="Rock5" type="Sprite" parent="bg/Rocks"]
position = Vector2( 722, 355 )
rotation = -1.15897
scale = Vector2( 3.5, 3.5 )
texture = ExtResource( 6 )

[node name="Rock6" type="Sprite" parent="bg/Rocks"]
position = Vector2( 816, 324 )
rotation = 0.760148
scale = Vector2( 3.5, 3.5 )
texture = ExtResource( 6 )

[node name="WaterShader" type="MeshInstance2D" parent="bg"]
material = SubResource( 5 )
position = Vector2( 573, 629 )
rotation = 1.5708
scale = Vector2( 583.129, 583.129 )
mesh = SubResource( 6 )

[node name="CanvasModulate" type="CanvasModulate" parent="bg"]
color = Color( 0.247059, 0.247059, 0.247059, 1 )

[node name="Light2D" type="Light2D" parent="bg"]
position = Vector2( 466, 319 )
rotation = -0.641128
scale = Vector2( 0.298796, 208.295 )
texture = SubResource( 34 )
range_layer_min = 1
range_layer_max = 1
shadow_item_cull_mask = 3

[node name="Menu" type="CanvasLayer" parent="."]
layer = 2

[node name="Menu" type="Control" parent="Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="MainPanel" type="Panel" parent="Menu/Menu"]
margin_right = 300.0
margin_bottom = 480.0

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/Menu/MainPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -99.0
margin_top = -86.0
margin_right = 100.0
margin_bottom = 86.0

[node name="Start" type="Button" parent="Menu/Menu/MainPanel/VBoxContainer"]
margin_right = 199.0
margin_bottom = 54.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
enabled_focus_mode = 0
text = "Start"

[node name="Options" type="Button" parent="Menu/Menu/MainPanel/VBoxContainer"]
margin_top = 58.0
margin_right = 199.0
margin_bottom = 113.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
enabled_focus_mode = 0
text = "Options"

[node name="Quit" type="Button" parent="Menu/Menu/MainPanel/VBoxContainer"]
margin_top = 117.0
margin_right = 199.0
margin_bottom = 172.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
enabled_focus_mode = 0
text = "Quit"

[node name="Label" type="Label" parent="Menu/Menu/MainPanel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -96.5
margin_top = 58.0
margin_right = 96.5
margin_bottom = 98.0
custom_fonts/font = SubResource( 4 )
text = "Nyctophilia"
align = 1
valign = 1

[node name="Options" type="Panel" parent="Menu/Menu"]
visible = false
margin_left = 375.0
margin_top = 50.0
margin_right = 756.0
margin_bottom = 419.0

[node name="Label" type="Label" parent="Menu/Menu/Options"]
margin_left = 5.0
margin_top = 5.0
margin_right = 56.0
margin_bottom = 19.0
text = "Options"

[node name="Display" type="Control" parent="Menu/Menu/Options"]
margin_top = 61.0
margin_right = 40.0
margin_bottom = 101.0

[node name="Label" type="Label" parent="Menu/Menu/Options/Display"]
margin_left = 5.0
margin_right = 73.0
margin_bottom = 14.0
text = "Display"

[node name="Dimensions" type="Control" parent="Menu/Menu/Options/Display"]
margin_left = 10.0
margin_top = 20.0
margin_right = 50.0
margin_bottom = 60.0

[node name="WidthLabel" type="Label" parent="Menu/Menu/Options/Display/Dimensions"]
margin_right = 68.0
margin_bottom = 14.0
text = "Width"

[node name="Width" type="TextEdit" parent="Menu/Menu/Options/Display/Dimensions/WidthLabel"]
margin_top = 15.0
margin_right = 50.0
margin_bottom = 35.0
text = "854"

[node name="HeightLabel" type="Label" parent="Menu/Menu/Options/Display/Dimensions"]
margin_left = 60.0
margin_right = 128.0
margin_bottom = 14.0
text = "Height"

[node name="Height" type="TextEdit" parent="Menu/Menu/Options/Display/Dimensions/HeightLabel"]
margin_top = 15.0
margin_right = 50.0
margin_bottom = 35.0
text = "480"

[node name="Modes" type="Control" parent="Menu/Menu/Options/Display"]
margin_top = 75.0
margin_right = 40.0
margin_bottom = 115.0

[node name="Label" type="Label" parent="Menu/Menu/Options/Display/Modes"]
margin_left = 5.0
margin_right = 45.0
margin_bottom = 14.0
text = "Modes"

[node name="Buttons" type="VBoxContainer" parent="Menu/Menu/Options/Display/Modes"]
margin_left = 10.0
margin_top = 20.0
margin_right = 91.0
margin_bottom = 64.0
alignment = 1

[node name="Windowed" type="Button" parent="Menu/Menu/Options/Display/Modes/Buttons"]
margin_right = 89.0
margin_bottom = 21.0
text = "Windowed"

[node name="Fullscreen" type="Button" parent="Menu/Menu/Options/Display/Modes/Buttons"]
margin_top = 25.0
margin_right = 89.0
margin_bottom = 46.0
text = "Fullscreen"

[node name="Borderless" type="Button" parent="Menu/Menu/Options/Display/Modes/Buttons"]
margin_top = 50.0
margin_right = 89.0
margin_bottom = 71.0
text = "Borderless"

[node name="VSync" type="CheckBox" parent="Menu/Menu/Options/Display/Modes/Buttons"]
margin_top = 75.0
margin_right = 89.0
margin_bottom = 96.0
text = "V-Sync"

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/Menu/Options"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -69.5
margin_top = -51.0
margin_right = 69.5
margin_bottom = -3.0

[node name="HBoxContainer" type="HBoxContainer" parent="Menu/Menu/Options/VBoxContainer"]
margin_right = 145.0
margin_bottom = 21.0

[node name="ApplyChanges" type="Button" parent="Menu/Menu/Options/VBoxContainer/HBoxContainer"]
margin_right = 45.0
margin_bottom = 21.0
size_flags_horizontal = 3
text = "Apply"

[node name="SaveChanges" type="Button" parent="Menu/Menu/Options/VBoxContainer/HBoxContainer"]
margin_left = 49.0
margin_right = 95.0
margin_bottom = 21.0
size_flags_horizontal = 3
text = "Save"

[node name="LoadChanges" type="Button" parent="Menu/Menu/Options/VBoxContainer/HBoxContainer"]
margin_left = 99.0
margin_right = 145.0
margin_bottom = 21.0
size_flags_horizontal = 3
text = "Load"

[node name="Autoload" type="CheckBox" parent="Menu/Menu/Options/VBoxContainer"]
margin_top = 25.0
margin_right = 145.0
margin_bottom = 46.0
text = "Load on startup"

[node name="ApplyTimer" type="Timer" parent="Menu/Menu"]
wait_time = 0.5

[connection signal="pressed" from="Menu/Menu/MainPanel/VBoxContainer/Start" to="Menu/Menu" method="_on_Start_pressed"]
[connection signal="pressed" from="Menu/Menu/MainPanel/VBoxContainer/Options" to="Menu/Menu" method="_on_Options_pressed"]
[connection signal="pressed" from="Menu/Menu/MainPanel/VBoxContainer/Quit" to="Menu/Menu" method="_on_Quit_pressed"]
[connection signal="text_changed" from="Menu/Menu/Options/Display/Dimensions/WidthLabel/Width" to="Menu/Menu" method="_on_ResWidth_text_changed"]
[connection signal="text_changed" from="Menu/Menu/Options/Display/Dimensions/HeightLabel/Height" to="Menu/Menu" method="_on_ResHeight_text_changed"]
[connection signal="pressed" from="Menu/Menu/Options/Display/Modes/Buttons/Windowed" to="Menu/Menu" method="_on_WindowedMode_pressed"]
[connection signal="pressed" from="Menu/Menu/Options/Display/Modes/Buttons/Fullscreen" to="Menu/Menu" method="_on_FullscreenMode_pressed"]
[connection signal="pressed" from="Menu/Menu/Options/Display/Modes/Buttons/Borderless" to="Menu/Menu" method="_on_BorderlessMode_pressed"]
[connection signal="toggled" from="Menu/Menu/Options/Display/Modes/Buttons/VSync" to="Menu/Menu" method="_on_VSync_toggled"]
[connection signal="pressed" from="Menu/Menu/Options/VBoxContainer/HBoxContainer/ApplyChanges" to="Menu/Menu" method="_on_ApplyChanges_pressed"]
[connection signal="pressed" from="Menu/Menu/Options/VBoxContainer/HBoxContainer/SaveChanges" to="Menu/Menu" method="_on_SaveChanges_pressed"]
[connection signal="pressed" from="Menu/Menu/Options/VBoxContainer/HBoxContainer/LoadChanges" to="Menu/Menu" method="_on_LoadChanges_pressed"]
[connection signal="toggled" from="Menu/Menu/Options/VBoxContainer/Autoload" to="Menu/Menu" method="_on_Autoload_toggled"]
[connection signal="timeout" from="Menu/Menu/ApplyTimer" to="Menu/Menu" method="_on_ApplyTimer_timeout"]
